--- a/values-grafana.yaml
+++ b/values-grafana.yaml
@@ -4,7 +4,7 @@ grafana.ini:
     disable_login_form: true
   auth.anonymous:
     enabled: true
-    org_role: Editor
+    org_role: Admin 
 
 # Configure the Prometheus datasource
 datasources:
